# web-bbq

./: .gitignore  CLAUDE.md
.github/workflows/: build-macos.yml  build-multiplatform.yml
backend/: .env.example  CLAUDE.md  ConnectionManager.py  Dockerfile  main.py  requirements.txt
backend/.ebextensions/: 01_fastapi.config
frontend/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json
frontend/public/: meat-transformed.glb  meat.glb
frontend/src/: App.module.css  App.tsx  Store.ts  Student.tsx  Teacher.tsx  firebase.ts  index.css  main.tsx  theme.ts  types.ts
frontend/src/Components/: Feedback.tsx  FeedbackBtn.tsx  Line.tsx  LineItem.tsx  Notification.tsx  QuestionWindow.tsx  Questions.tsx  Responses.tsx  Settings.tsx
frontend/src/Components/bbq/: Game.tsx  Grill.tsx  Meat.tsx  MeatAnim.tsx  MeatModel.tsx  ThreeCanvas.module.css  ThreeCanvas.tsx  Units.tsx
frontend/src/Components/teacher/: Login.tsx
frontend/src/pages/: Student.tsx  Teacher.tsx
gobbq/: CLAUDE.md  README.md  config.go  go.mod  go.sum  main.go  student.go  teacher.go  theme.go  theme.yaml  theme.yaml.example  types.go  websocket.go
websocket/: Cargo.toml
websocket/src/: main.rs  types.rs
