[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
futures = "0.3.31"
futures-util = "0.3.31"
ratatui = "0.29.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
